--- a/Ollo-Cashflow/Ollo-Cashflow.csproj
+++ b/Ollo-Cashflow/Ollo-Cashflow.csproj
@@ -255,6 +255,7 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Report\Index.cshtml" />
     <Content Include="Views\Report\Report.cshtml" />
+    <Content Include="Views\Report\Export.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
