--- a/Ollo-Cashflow/Ollo-Cashflow.csproj
+++ b/Ollo-Cashflow/Ollo-Cashflow.csproj
@@ -256,6 +256,7 @@
     <Content Include="Views\Report\Index.cshtml" />
     <Content Include="Views\Report\Report.cshtml" />
     <Content Include="Views\Report\Export.cshtml" />
+    <Content Include="Views\Shared\TreasuryReportPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
